--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "^12.1.0",
+    "next-auth": "^4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
