--- a/package.json
+++ b/package.json
@@ -14,12 +14,9 @@
     "@next/font": "13.1.6",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
-    "mongodb": "^5.1.0",
     "next": "^12.1.0",
-    "next-auth": "^4.0.0-beta.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "spotify-web-api-node": "^5.0.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
