--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "mongodb": "^5.1.0",
     "next": "^12.1.0",
     "next-auth": "^4.0.0-beta.7",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
